--- a/UP01/MainWindow.xaml
+++ b/UP01/MainWindow.xaml
@@ -28,20 +28,20 @@
                 </Setter.Value>
             </Setter>
             <Setter Property="BorderThickness" Value="2"/>
-            <Setter Property="BorderBrush" Value="Green"/>
+            <Setter Property="BorderBrush" Value="#1E90FF"/>
         </Style>
         <Style TargetType="ComboBox">
             <Setter Property="Background" Value="White"/>
             <Setter Property="BorderThickness" Value="1"/>
-            <Setter Property="BorderBrush" Value="Red"/>
+            <Setter Property="BorderBrush" Value="#1E90FF"/>
         </Style>
         <Style TargetType="ComboBoxItem">
             <Setter Property="Background" Value="White"/>
             <Setter Property="BorderThickness" Value="1"/>
-            <Setter Property="BorderBrush" Value="Red"/>
+            <Setter Property="BorderBrush" Value="#1E90FF"/>
         </Style>
         <Style TargetType="DataGridRow">
-            <Setter Property="BorderBrush" Value="Red"/>
+            <Setter Property="BorderBrush" Value="#1E90FF"/>
             <Setter Property="BorderThickness" Value="0,0,0,0.8"/>
         </Style>
     </Window.Resources>
@@ -72,7 +72,7 @@
                             </StackPanel>
                         </ScrollViewer>
                         <StackPanel DockPanel.Dock="Bottom" Margin="0,5,0,0">
-                            <Button Content="Добавить" Click="Button_Click" />
+                            <Button Content="Добавить"/>
                             <Button Content="Изменить запись"/>
                             <Button Content="Удалить запись" />
                         </StackPanel>
