--- a/UP01/Registration.xaml
+++ b/UP01/Registration.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="UP01.Authorization"
+﻿<Window x:Class="UP01.Registration"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UP01"
         mc:Ignorable="d"
-        Title="Authorization" Height="550" Width="400">
+        Title="Registration" Height="550" Width="400">
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="Margin" Value="5"/>
@@ -31,7 +31,6 @@
             <Setter Property="Foreground" Value="#FFFFF0"/>
             <Setter Property="FontSize" Value="22"/>
             <Setter Property="Padding" Value="5"/>
-            
         </Style>
     </Window.Resources>
     <Grid Background="#696969">
@@ -41,8 +40,8 @@
             <TextBox x:Name="TB_Login"/>
             <TextBlock Text="Пароль"/>
             <PasswordBox x:Name="PB_Password"/>
-            <Button Content="Войти" Click="Button_Click"/>
-            <Button Content="Зарегистрироваться" Click="Button_Click_1"/>
+            <Button Content="Зарегистрироваться" Click="Button_Click"/>
+            <Button Content="Назад" Click="Button_Click_1"/>
         </StackPanel>
     </Grid>
 </Window>
